--- a/sass/index.scss
+++ b/sass/index.scss
@@ -151,6 +151,8 @@ nav {
 		}
 	}
 
+	&>a:hover {text-decoration: underline;}
+
 	.submenu {
 		position: relative;
 
@@ -387,6 +389,7 @@ article {
 
 			.picture {
 				margin-right: 40px;
+				cursor: pointer;
 			}
 
 			img {
@@ -457,13 +460,15 @@ article {
 			position: absolute;
 			bottom: 20px;
 			width: 200px;
+			max-width: 80%;
 			left: 50%;
 			margin-left: -115px;
 		}
 	}
 
 	img {
-		max-width: 250px;
+		width: 250px;
+		max-width: 100%;
 	}
 }
 
@@ -558,5 +563,38 @@ footer {
 
 	&.animate {
 		left: 110%;
+	}
+}
+
+$lightbox_width: 800px;
+$lightbox_height: 533px;
+
+.lightbox {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0, 0.7);
+	
+	.picture {
+		position: absolute;
+		width: $lightbox_width;
+		height: $lightbox_height;
+		height: 533px;
+		top: 50%;
+		left: 50%;
+		margin-left: - $lightbox_width/2;
+		margin-top: - $lightbox_height/2;
+	}
+
+	.close_lightbox {
+		position: absolute;
+		color: #fff;
+		font-size: 30px;
+		top: 150px;
+		right: 20%;
+		cursor: pointer;
 	}
 }
